# tcc-maintenance-planning-problem

./: Makefile  README.md  pyproject.toml  requirements.txt
input/: A_01.json  A_03.json  A_07.json  A_08.json  A_09.json  A_10.json  parameters.json
irace/: irace.R  irace_log.txt  parameters.txt  scenario.txt  target_runner.sh  train_instances.txt
logs/: log_A_01.txt  log_E_01.txt  log_E_02.txt
output/: A_01.txt  A_02.txt  A_03.txt  A_04.txt  A_05.txt  A_06.txt  A_07.txt  A_08.txt  A_09.txt  A_10.txt  A_11.txt  A_12.txt  A_13.txt  A_14.txt  A_15.txt  B_01.txt  B_02.txt  B_03.txt  B_04.txt  B_05.txt  B_06.txt  B_07.txt  B_08.txt  B_09.txt  B_10.txt  B_11.txt  B_12.txt  B_13.txt  B_14.txt  B_15.txt  C_01.txt  C_02.txt  C_03.txt  C_04.txt  C_05.txt  C_06.txt  C_07.txt  C_08.txt  C_09.txt  C_10.txt  (+7 more)
src/: main.py
src/preprocessing/: input_problem_loader.py
src/preprocessing/model/: exclusion.py  intervention.py  problem.py  resource.py  risk.py  season.py  time_horizon.py
src/processing/: differential_evolution.py  genetic_algorithm.py  gurobi.py  optimization.py  optimization_step.py
utils/: format_solution.py  log.py
