[tool.poetry]
name = "tcc-maintenance-planning-problem"
version = "0.1.0"
description = ""
authors = ["Pedro Henrique R Pereira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
